Layout Test webrtc/video-mute.html is flaky. https://bugs.webkit.org/show_bug.cgi?id=177501

Reviewed by Eric Carlson.

Source/WebCore:

Covered by updated test expectation.

* platform/mediastream/mac/RealtimeIncomingVideoSourceCocoa.mm:
(WebCore::createBlackPixelBuffer): Make sure the whole buffer is properly initialized.

LayoutTests:

* platform/ios-wk2/TestExpectations:
* platform/mac-wk2/TestExpectations:
* webrtc/routines.js: Increase counter to make test more robust.


Canonical link: https://commits.webkit.org/204700@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236211 268f45cc-cd09-0410-ab3c-d52691b4dbfc